--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,18 @@
     /* flex-direction: column; */
 }
 
+.map {
+    margin: 1px;
+    padding: 3px;
+    padding-left: 5px;
+}
+
+.color {
+    margin: 1px;
+    padding: 3px;
+    padding-left: 5px;
+}
+
 .color.inactive {
   color:rgb(92 92 92);
 }
